--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -25,3 +25,13 @@ section {
 .border-button {
   border-radius:0px 5px 5px 0px;
 }
+
+.border {
+  border-radius: 5px;
+  padding-bottom: 50px;
+  padding-top: 10px; 
+}
+
+.col-sm-12 {
+  margin-bottom: 15px;
+}
